--- a/index.html
+++ b/index.html
@@ -954,6 +954,7 @@
     <script src="js/model.js"></script>
     <script src="js/camera-controller.js"></script>
     <script src="js/collision-manager.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>     
+    <script src="js/main.js"></script>    
 </body>
 </html>
