--- a/index.html
+++ b/index.html
@@ -907,6 +907,7 @@
     </a-scene>
 
     <!-- JavaScript Files -->
+    <script src="js/texture-finder.js"></script>
     <script src="js/model.js"></script>
     <script src="js/model-handler.js"></script>
     <script src="js/camera-controller.js"></script>
